--- a/adminApp/package.json
+++ b/adminApp/package.json
@@ -21,10 +21,12 @@
     "@types/react-router-dom": "^5.1.7",
     "chart.js": "^3.7.0",
     "firebase": "^8.6.8",
+    "google-maps-react": "^2.0.6",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.1",
+    "react-hook-google-maps": "0.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
