--- a/myApp/package.json
+++ b/myApp/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^3.5.1",
     "finnhub": "^1.2.7",
     "firebase": "^8.6.8",
+    "google-maps-react": "^2.0.6",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
     "react-chartjs-2": "^3.0.5",
